String#format -> String#formatted